force-app/main/default/objects/Credit_Order_Inventory_Movement__c/Credit_Order_Inventory_Movement__c.object-meta.xml
<CustomObject>
    <label>Credit Order Inventory Movement</label>
    <nameField>
        <displayFormat>CIM-{00000}</displayFormat>
        <label>Credit Order Inventory Movement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Order Inventory Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>