force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Credit_Order__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order__c</fullName>
    <formula>Credit_Order_Line__r.Credit_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Order</label>
    <type>Text</type>
</CustomField>