force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Credit_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order_Line__c</fullName>
    <label>Credit Order Line</label>
    <referenceTo>Credit_Order_Line__c</referenceTo>
    <relationshipLabel>Credit Order Inventory Movements</relationshipLabel>
    <relationshipName>Credit_Order_Inventory_Movements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>