force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Inventory_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Quantity_Available__c</fullName>
    <label>Inventory Quantity Available</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Credit Order Inventory Movements</relationshipLabel>
    <relationshipName>Credit_Order_Inventory_Movements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>