force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Credit Order Inventory Movements</relationshipLabel>
    <relationshipName>Credit_Order_Inventory_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>