force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date__c</fullName>
    <label>Movement Date</label>
    <type>Date</type>
</CustomField>