force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Order Inventory Movements</relationshipLabel>
    <relationshipName>Credit_Order_Inventory_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>