force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>AcctSeed__Project_Task__c</referenceTo>
    <relationshipLabel>Credit Order Inventory Movements</relationshipLabel>
    <relationshipName>Credit_Order_Inventory_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>