force-app/main/default/objects/Credit_Order_Inventory_Movement__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>